--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "dependencies": {
     "axios": "^1.6.7",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ffmpeg": "^0.0.4",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "scripts": {
+    "start": "npx nodemon ./app.js"
   }
 }
