--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
+    "@distube/ytdl-core": "^4.13.3",
     "axios": "^1.6.7",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "ffmpeg": "^0.0.4",
-    "ytdl-core": "^4.11.5"
+    "libsodium-wrappers": "^0.7.13",
+    "play-dl": "^1.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
