--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "ffmpeg": "^0.0.4",
     "libsodium-wrappers": "^0.7.13",
     "play-dl": "^1.9.7",
-    "prism-media": "^1.3.5",
-    "ytdl-core": "^4.11.5"
+    "prism-media": "^1.3.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
